# alpentind

./: .coverage  .flake8  .gitignore  ARCHITECTURE.md  CHANGELOG.md  COPILOT.md  DOMAIN_DICTIONARY.md  Makefile  README.md  README.txt  README_CORE003.md  README_CORE004.md  README_CORE004_1.md  ROADMAP.md  VISION.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: .gitkeep
app/cli/: main.py
app/core/: config.py  container.py  database.py  logging.py
app/models/: __init__.py  booking.py  contact.py  customer.py  departure.py  facility.py  guide.py  guide_note.py  lodging.py  mixins.py  (+6 more)
database/: schema.sql
docs/: ADR-0004.md  CLI_GUIDE.md  DOMAIN_MODEL.md  EXPEDITION_DOMAIN.md  README.md  ReleaseNotes_v3.0.2.md
frontend/: index.html
preview/: accommodations-add.html  accommodations-workspace.html  accommodations.html  arbetsdag.html  dialog.html  forfragningar.html  index.html  kalender.html  kontakt-workspace.html  kontakter-gaster.html  kontakter-guider.html  kontakter-gäster.html  kontakter-ovriga.html  kontakter-resor.html  kontakter-samarbetspartners.html  kontakter.html  oversikt.html  person-list.html  person.html  planering-projekt.html  planering.html  produkter.html  resa.html  upplevelser.html
scripts/: bootstrap.py
src/: __init__.py
tests/: conftest.py  test_base_repository.py  test_customer_service.py  test_database.py  test_expedition.py  test_integration.py  test_models.py  test_pricing.py  test_repositories.py  test_route_service.py  test_structure.py
(+231 files in other folders)
